@@ -8,7 +8,7 @@ import data.internalData.MavenComponent;
 import logger.Logger;
 import repository.ComponentRepository;
 import service.BFDependencyCrawler;
-import util.Constants;
+import settings.Settings;
 
 import java.text.DecimalFormat;
 import java.util.ArrayDeque;
@@ -25,7 +25,8 @@ import java.util.concurrent.atomic.AtomicInteger;
 public class BFDependencyCrawlerImpl implements BFDependencyCrawler {
     private static final Logger logger = Logger.of("DependencyCrawler");
 
-    public void crawl(Component parentComponent, Boolean updateDependenciesToNewestVersion) {
+    @Override
+    public void crawl(Component parentComponent, boolean updateDependenciesToNewestVersion) {
 
         var time = System.currentTimeMillis();
         logger.info("Crawling dependencies of " + parentComponent.getQualifiedName() + "...");
@@ -34,6 +35,8 @@ public class BFDependencyCrawlerImpl implements BFDependencyCrawler {
         if (updateDependenciesToNewestVersion) {
             logger.info("Applying overwritten versions...");
             updateDependenciesToNewestVersion(parentComponent);
+        } else {
+            logger.info("Skipping applying overwritten versions.");
         }
 
         var loadedComponents = ComponentRepository.getAllRepositories().stream().mapToInt(it -> it.getLoadedComponents().size()).sum();
@@ -50,7 +53,7 @@ public class BFDependencyCrawlerImpl implements BFDependencyCrawler {
 
         AtomicInteger loadCount = new AtomicInteger();
         AtomicInteger failCount = new AtomicInteger();
-        ExecutorService executorService = Executors.newFixedThreadPool(Constants.crawlThreads);
+        ExecutorService executorService = Executors.newFixedThreadPool(Settings.crawlThreads);
         CompletionService<Void> completionService = new ExecutorCompletionService<>(executorService);
         var queue = new ConcurrentLinkedDeque<>(parentComponent.getDependenciesFiltered());
         AtomicInteger activeTasks = new AtomicInteger(0);
@@ -59,58 +62,12 @@ public class BFDependencyCrawlerImpl implements BFDependencyCrawler {
             Dependency dependency = queue.poll();
             if (dependency != null) {
                 activeTasks.incrementAndGet();
-                completionService.submit(() -> {
-                    try {
-                        //get the version of the dependency
-                        if (!dependency.hasVersion()) {
-                            repository.getVersionResolver().resolveVersion(dependency);
-                        }
-
-                        //get the component of the dependency
-                        var component = dependency.getComponent();
-
-                        // process the component
-                        if (component != null)
-                            if (!component.isLoaded()) {
-
-                                component.loadComponent();
-
-                                if (component.isLoaded()) {
-                                    queue.addAll(component.getDependenciesFiltered());
-
-                                    component.getDependencies().forEach(c -> {
-                                        if (!c.isNotOptional()) {
-                                            if (Constants.crawlOptional || Constants.crawlEverything)
-                                                logger.info("Dependency " + c + " is optional.");
-                                            else
-                                                logger.info("Dependency " + c + " is not resolved because it is optional.");
-                                        } else if (!c.shouldResolveByScope()) {
-                                            if (Constants.crawlEverything)
-                                                logger.info("Dependency " + c + " is of scope \"" + c.getScope() + "\". Might cannot be resolved.");
-                                            else
-                                                logger.info("Dependency " + c + " is not resolved because it is of scope \"" + c.getScope() + "\".");
-                                        }
-                                    });
-
-                                    loadCount.incrementAndGet();
-                                } else {
-                                    failCount.incrementAndGet();
-                                }
-                            }
-
-                    } catch (Exception e) {
-                        logger.error("Failed to resolve dependency " + dependency, e);
-                        failCount.incrementAndGet();
-                    } finally {
-                        activeTasks.decrementAndGet();
-                    }
-                    return null;
-                });
+                completionService.submit(() -> crawler(dependency, repository, queue, loadCount, failCount, activeTasks));
             } else {
                 try {
                     Future<Void> future = completionService.poll(1, TimeUnit.MINUTES);
                     if (future != null) {
-                        future.get(); // ensure exceptions are propagated
+                        future.get();
                     }
                 } catch (InterruptedException e) {
                     Thread.currentThread().interrupt();
@@ -135,19 +92,78 @@ public class BFDependencyCrawlerImpl implements BFDependencyCrawler {
         }
     }
 
-    public void updateDependenciesToNewestVersion(Component rootComponent) {
+    /**
+     * Crawls the dependencies of a component. Helper for the crawl method.
+     * @param dependency the dependency to resolve
+     * @param repository the repository to use
+     * @param queue the queue of dependencies to resolve
+     * @param loadCount the count of loaded components
+     * @param failCount the count of failed components
+     * @param activeTasks the count of active tasks
+     * @return null
+     */
+    private static Void crawler(Dependency dependency, ComponentRepository repository, ConcurrentLinkedDeque<Dependency> queue, AtomicInteger loadCount, AtomicInteger failCount, AtomicInteger activeTasks) {
+        try {
+            //get the version of the dependency
+            if (!dependency.hasVersion()) {
+                repository.getVersionResolver().resolveVersion(dependency);
+            }
+
+            //get the component of the dependency
+            var component = dependency.getComponent();
+
+            // process the component
+            if (component != null)
+                if (!component.isLoaded()) {
+
+                    component.loadComponent();
+
+                    if (component.isLoaded()) {
+                        queue.addAll(component.getDependenciesFiltered());
+
+                        component.getDependencies().forEach(c -> {
+                            if (!c.isNotOptional()) {
+                                if (Settings.crawlOptional || Settings.crawlEverything)
+                                    logger.info("Dependency " + c + " is optional.");
+                                else
+                                    logger.info("Dependency " + c + " is not resolved because it is optional.");
+                            } else if (!c.shouldResolveByScope()) {
+                                if (Settings.crawlEverything)
+                                    logger.info("Dependency " + c + " is of scope \"" + c.getScope() + "\". Might cannot be resolved.");
+                                else
+                                    logger.info("Dependency " + c + " is not resolved because it is of scope \"" + c.getScope() + "\".");
+                            }
+                        });
+
+                        loadCount.incrementAndGet();
+                    } else {
+                        failCount.incrementAndGet();
+                    }
+                }
+
+        } catch (Exception e) {
+            logger.error("Failed to resolve dependency " + dependency, e);
+            failCount.incrementAndGet();
+        } finally {
+            activeTasks.decrementAndGet();
+        }
+        return null;
+    }
+
+    private void updateDependenciesToNewestVersion(Component rootComponent) {
         var queue = new ArrayDeque<>(rootComponent.getDependenciesFiltered());
         while (!queue.isEmpty()) {
             var dependency = queue.poll();
             var dependencyComponent = dependency.getComponent();
             if (dependencyComponent == null) continue;
-            if (!(dependencyComponent instanceof MavenComponent) && !(dependency.getTreeParent() == rootComponent) && !(dependencyComponent instanceof ReadComponent readComponent && readComponent.getActualComponent() instanceof MavenComponent)) {
+            if (!(dependencyComponent instanceof MavenComponent) && dependency.getTreeParent() != rootComponent && !(dependencyComponent instanceof ReadComponent readComponent && readComponent.getActualComponent() instanceof MavenComponent)) {
                 logger.info("skipping component " + dependencyComponent + " and all its dependants " + dependencyComponent.getDependencyComponentsFlatFiltered() + " since its not a maven component and not on top level.");
                 continue;
             }
             if (dependencyComponent.getRepository().getLoadedComponents(dependencyComponent.getGroup(), dependencyComponent.getArtifactId()).isEmpty())
                 continue;
-            var newestComponent = dependencyComponent.getRepository().getLoadedComponents(dependencyComponent.getGroup(), dependencyComponent.getArtifactId()).getLast();
+            var possibleComponents = dependencyComponent.getRepository().getLoadedComponents(dependencyComponent.getGroup(), dependencyComponent.getArtifactId());
+            var newestComponent = possibleComponents.get(possibleComponents.size() - 1);
             if (newestComponent.getVersion().compareTo(dependencyComponent.getVersion()) > 0) {
                 //check if we have a version in the tree parent
                 var treeParent = dependency.getTreeParent();
